--- a/odr-provider/CMakeLists.txt
+++ b/odr-provider/CMakeLists.txt
@@ -1,4 +1,8 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+add_library(odr-provider-lib
+	"c.cpp"
+	"c.h")
 add_executable(odr-provider
 	"main.cpp"
 	"a.cpp"
